# verito

./: .gitignore  CONTRIBUTING.md  README.md  STYLE.md  main.py  pyproject.toml
models/20251122T115012/: REPORT.md  history.json
scripts/: detect.py  download_dataset.py  train.py  tune.py  upload_model.py
tests/: conftest.py  test_class_weights.py  test_image_loading.py  test_metrics.py
verito/: __init__.py  data.py  metrics.py  model.py  report.py
